# submit-ce

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  clitools.py  main.py  main_ui.py  openapi.json  pyproject.toml  requirements-dev.txt  requirements.txt  ui.py
client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
client/.github/workflows/: python.yml
client/.openapi-generator/: FILES
client/docs/: AgreedToPolicy.md  Authorship.md  AuthorshipDirect.md  AuthorshipProxy.md  CategoryChangeResult.md  HTTPValidationError.md  PostSubmitApi.md  ServiceApi.md  SetCategories.md  SetLicense.md  SetMetadata.md  Started.md  StartedAlterExising.md  StartedNew.md  SubmitApi.md  ValidationError.md  ValidationErrorLocInner.md
client/openapi_submit_client/: __init__.py  api_client.py  configuration.py  rest.py
client/openapi_submit_client/api/: __init__.py  post_submit_api.py  service_api.py  submit_api.py
client/openapi_submit_client/models/: __init__.py  authorship.py  category_change_result.py  http_validation_error.py  set_categories.py  started.py  started_alter_exising.py  started_new.py  validation_error.py
client/test/: test_agreed_to_policy.py  test_authorship.py  test_authorship_direct.py  test_authorship_proxy.py  test_category_change_result.py  test_http_validation_error.py  test_post_submit_api.py  test_service_api.py  test_set_categories.py  test_set_license.py  test_set_metadata.py  test_started.py  test_started_alter_exising.py  test_started_new.py  test_submit_api.py  test_validation_error.py  test_validation_error_loc_inner.py
openapi_client/: __init__.py  exceptions.py
openapi_client/api/: __init__.py  post_submit_api.py  service_api.py
openapi_client/models/: agreed_to_policy.py  authorship.py  http_validation_error.py  validation_error.py  validation_error_loc_inner.py
openapi_client/submit_client/: __init__.py
schema/: openapi.yaml
src/arxiv/submission/: __init__.py  auth.py  config.py  core.py
src/arxiv/submit_fastapi/: app.py  config.py  db.py  default_api.py
submit/: .python-version  config.py  db.sqlite  factory.py  util.py
submit/controllers/ui/: __init__.py  cross.py  delete.py  jref.py  util.py  withdraw.py
submit/integration/: test_integration.py
submit/routes/: __init__.py  auth.py
submit/routes/ui/: flow_control.py  ui.py
submit/tests/: test_domain.py  test_workflow.py
submit/workflow/: __init__.py  conditions.py  processor.py  stages.py  test_new_submission.py
submit_ce/api/: app.py  auth.py  config.py  routes.py
submit_ce/api/api/: default_api.py  default_api_base.py
submit_ce/api/domain/: __init__.py  (+9 more)
submit_ce/domain/: agent.py
submit_ce/fastapi/: app.py  auth.py  config.py
submit_ce/file_store/: legacy_file_store.py
submit_ce/submit_fastapi/: app.py  auth.py  config.py  db.py  main.py
submit_ce/ui/: __init__.py  backend.py  config.py  core.py  exceptions.py  factory.py  router.py  util.py
submit_client/: README.md  pyproject.toml  setup.py
submit_client/.openapi-generator/: FILES
submit_client/docs/: AgreedToPolicy.md  Authorship.md  AuthorshipDirect.md  AuthorshipProxy.md  CategoryChangeResult.md  PostSubmitApi.md  ServiceApi.md  SetCategories.md  SetLicense.md  SetMetadata.md  Started.md  StartedAlterExising.md  StartedNew.md  SubmitApi.md
submit_client/openapi_client/: __init__.py  api_client.py  configuration.py  rest.py
submit_client/test/: test_agreed_to_policy.py  test_authorship.py  test_authorship_direct.py  test_authorship_proxy.py  test_category_change_result.py  test_http_validation_error.py  test_post_submit_api.py  test_service_api.py  test_set_categories.py  test_set_license.py  test_set_metadata.py  test_started.py  test_started_alter_exising.py  test_started_new.py  test_submit_api.py  test_validation_error.py  test_validation_error_loc_inner.py
tests/: conftest.py  make_test_db.py  test_default_api.py
(+164 files in other folders)
