[project]
name = "submit-ce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.poetry]
name = "submit-ce"
version = "0.1.0"
description = "arXiv Submit"
authors = ["Brian D. Caruso <bdc34@cornell.edu>"]
readme = "README.md"
packages = [{include = "arxiv", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
#arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", branch = "develop" }

backports-datetime-fromisoformat = "*"
jsonschema = "*"
mimesis = "*"
mypy = "*"
mypy_extensions = "*"

python-dateutil = "*"
pytz = "==2018.7"
pyyaml = ">=4.2b1"
retry = "*"
unidecode = "*"
urllib3 = ">=1.24.2"
semver = "^3.0.2"
requests-toolbelt = "^1.0.0"
pydantic-settings = "^2.5.2"
fastapi = {extras = ["all"], version = "^0.114.2"}
sqlalchemy = "^2.0.34"

[tool.poetry.group.dev.dependencies]
coverage = "*"
coveralls = "*"
docker = "*"
mimesis = "*"
openapi-spec-validator = "*"
pydocstyle = "==3.0.0"
pylint = "<2"
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]
gen_server = "arxiv.scripts:gen_server"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
skip = [
    '.eggs', '.git', '.hg', '.mypy_cache', '.nox', '.pants.d', '.tox',
    '.venv', '_build', 'buck-out', 'build', 'dist', 'node_modules', 'venv',
]
skip_gitignore = true
